# codework

./: README.md  justfile  pyproject.toml
src/codework/: interactive.py  main.py  plan.py  runner.py  spec.py
tests/: test_interactive.py  test_main.py  test_plan.py  test_runner.py  test_spec.py
