[project]
name = "codework"
version = "0.1.0"
description = "CLI tool for generating code exercises"
readme = "README.md"
authors = [
    { name = "Peter Evans" }
]
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
]

[project.scripts]
codework = "codework.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
